cloudflare-exporter/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    secrets-sync/enabled: "true"
